[project]
name = "lance-preconfs"
version = "0.1.1"
description = "Add your description here"
authors = [{ name = "Evan K", email = "ekcopersonal@gmail.com" }]
dependencies = [
    "lancedb-tables>=0.1.3",
    "mev-commit-sdk-py>=0.2.2",
    "duckdb>=1.0.0",
    "dash>=2.17.1",
    "plotly>=5.23.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lance_preconfs"]
