[project]
name = "lance-preconfs"
version = "0.2.1"
description = "Add your description here"
authors = [{ name = "Evan K", email = "ekcopersonal@gmail.com" }]
dependencies = [
    "lancedb-tables>=0.1.3",
    "mev-commit-sdk-py==0.4.7",
    "duckdb>=1.0.0",
    "nbformat>=5.10.4",
    "ipykernel>=6.29.5",
    "marimo==0.8.9",
    "altair>=5.4.1",
    "pandas==2.2.2",
    "mev-boost-py>=0.1.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lance_preconfs"]
